--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "flowbite-react": "^0.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-query": "^4.0.0-beta.23",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "sweetalert2": "^11.4.23",
